--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "-": "^0.0.1",
+    "framer-motion": "^11.1.9",
+    "mdb-react-ui-kit": "^8.0.0",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
